force-app/main/default/objects/Secondary_Roles__c/Secondary_Roles__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Secondary Roles</label>
</CustomObject>