force-app/main/default/objects/Secondary_Roles__c/fields/App_1__c.field-meta.xml
<CustomField>
    <fullName>App_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>App 1</label>
    <type>Checkbox</type>
</CustomField>