force-app/main/default/objects/Secondary_Roles__c/fields/App_2__c.field-meta.xml
<CustomField>
    <fullName>App_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>App 2</label>
    <type>Checkbox</type>
</CustomField>