force-app/main/default/objects/Secondary_Roles__c/fields/App_2_Role__c.field-meta.xml
<CustomField>
    <fullName>App_2_Role__c</fullName>
    <label>App 2 Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>